<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/expanded_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/principle_spouse_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/principle_spouse" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/start_age_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"
                        android:text="@string/start_age" />

                    <TextView
                        android:id="@+id/start_age_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/actual_start_age_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/actual_start_age_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"
                        android:text="@string/actual_start_age" />

                    <TextView
                        android:id="@+id/actual_start_age_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"
                        android:text="@string/full_retirement_age" />

                    <TextView
                        android:id="@+id/full_retirement_age_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"
                        android:text="@string/full_monthly_benefit" />

                    <TextView
                        android:id="@+id/full_monthly_benefit_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"
                        android:text="@string/monthly_benefit" />

                    <TextView
                        android:id="@+id/monthly_benefit_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="16dp"
                        android:textSize="22sp"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/details_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/income_source_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/editPensionFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/layout_margin"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:backgroundTint="@color/colorAccent"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:contentDescription="@string/add_income_source"/>

</android.support.design.widget.CoordinatorLayout>